<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/fragment_classroom_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/fragment_classroom_txt_title"
            android:textSize="16sp" />

        
    </RelativeLayout>




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/grays"
       
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fragment_classroom_txt_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/fragment_classroom_txt_head" />

        <RelativeLayout
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/describe_color" >

            <TextView
                android:id="@+id/fragment_classroom_txt_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textScaleX="2.1"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/fragment_classroom_txt_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:text="@string/fragment_classroom_txt_remind"
            android:textColor="@color/describe_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/fragment_classroom_btn_connection"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/icon_background_red"
            android:text="@string/fragment_classroom_btn_connection"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            
            <RadioButton
                android:id="@+id/fragment_classroom_btn_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/btn_dati"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_classroom_btn_answer" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/fragment_classroom_btn_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/btn_group"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_classroom_btn_group" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/fragment_classroom_btn_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/btn_toupiao"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_classroom_btn_vote" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2" >

            <RadioButton
                android:id="@+id/fragment_classroom_btn_responder"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="18dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_qiangda"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fragment_classroom_btn_responder" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2" >

            <RadioButton
                android:id="@+id/fragment_classroom_btn_more"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="22dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_more" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_classroom_btn_more" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider"
        />

</LinearLayout>