<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
         >

        <ImageButton
            android:id="@+id/img_end_studentcount_classroom"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:src="@drawable/select_imgview_back" />

        <TextView
            android:id="@+id/connection_classcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textSize="16sp"
            android:text="学员列表" />
        

    </RelativeLayout>
    <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/font_color"
            />
      <View 
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/grays"
            />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
         >

        <TextView
            android:id="@+id/txt_studentcount_classroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="学员列表（）"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_end_studentcount_classroom"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_clickanniu"
            android:gravity="center"
            android:text="下课"
            android:textColor="@color/white" />
    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp" >

        <GridView
            android:id="@+id/gridView_studentcount_classroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="5" >
        </GridView>
    </RelativeLayout>
   
<View 
    android:layout_width="match_parent"
    android:layout_height="8dp"
    android:background="@color/themegrey"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/lightgrey" />
         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            
            <RadioButton
                android:id="@+id/btn_answersheet_classroom_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/btn_dati"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_classroom_btn_answer" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/btn_group_fragment_classroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/btn_group"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_classroom_btn_group" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/btn_vote_fragment_classroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/btn_toupiao"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_classroom_btn_vote" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightgrey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2" >

            <RadioButton
                android:id="@+id/btn_responder_fragment_classroom"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="18dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_qiangda"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fragment_classroom_btn_responder" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2" >

            <RadioButton
                android:id="@+id/btn_more_fragment_classroom"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="22dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_more" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_classroom_btn_more" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider"
        />
        
</LinearLayout>
        

</LinearLayout>